refactor: update user and gym documentation to streamline request and response models
